--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,3 +1,34 @@
-<p>
-  login works!
-</p>
+<div class="example-container">
+<form [formGroup]="form" (submit)="onLoginSubmit()">
+
+    <!-- Username Field -->
+    <div class="form-group">
+      <label for="username">Username</label>
+      <div [ngClass]="{'has-error': form.controls.username.errors && form.controls.username.dirty, 'has-success': form.controls.username.valid && form.controls.username.dirty }">
+        <mat-form-field>
+        <input matInput type="text" name="username" formControlName="username" />
+         </mat-form-field>
+        <!-- Validation -->
+        <ul class="help-block">
+          <li *ngIf="form.controls.username.errors?.required && form.controls.username.dirty">This field is required.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Password Field  -->
+    <div class="form-group">
+      <label for="password">Password</label>
+      <div [ngClass]="{'has-error': form.controls.password.errors && form.controls.password.dirty, 'has-success': form.controls.password.valid && form.controls.password.dirty }">
+        <mat-form-field>
+        <input matInput class="form-control" type="password" name="password" formControlName="password" />
+       </mat-form-field>
+        <!-- Validation -->
+        <ul class="help-block">
+          <li *ngIf="form.controls.password.errors?.required && form.controls.password.dirty">This field is required.</li>
+        </ul>
+      </div>
+    </div>
+    <!-- Submit Button -->
+    <button mat-stroked-button color="primary" [disabled]="!form.valid || processing"  type="submit" value="Login">Enviar </button>
+  </form>
+</div>
