socketIo and login it's ok

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
 
     <a mat-flat-button *ngIf="authService.loggedIn()" routerLink="/condominio">condominio</a>
-    <a mat-flat-button  routerLink="/ticket">Ticket</a>
+    <a mat-flat-button  *ngIf="authService.loggedIn()" routerLink="/ticket">Ticket</a>
     <a mat-flat-button  *ngIf="authService.loggedIn()" routerLink="/comment-ticket">Comment</a>
     <a mat-flat-button *ngIf="!authService.loggedIn()" routerLink="/login">Login</a>
     <a mat-flat-button *ngIf="authService.loggedIn()" href="#" (click)="onLogoutClick()">Logout</a>
