--- a/client/src/app/components/ticket/ticket.component.html
+++ b/client/src/app/components/ticket/ticket.component.html
@@ -23,6 +23,9 @@
     <div class="panel-body">
       {{ ticket?.body }}
     </div>
+    <div class="panel-body">
+        {{ ticket?.createdBy }}
+      </div>
 
     </div>
 
